src/objects/Question__c.object
<CustomObject>
    <description>Question for a requirement item.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if this question is active. If unchecked, this question won&apos;t display on any applications.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicant_Type__c</fullName>
        <inlineHelpText>Applicant type(s) this question applies to (applies to all if blank)</inlineHelpText>
        <label>Applicant Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Applicant_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Field__c</fullName>
        <description>API name of the field on the Application object that this question maps to. If left blank, data from this question will be stored in the Question Response object.</description>
        <inlineHelpText>API name of the field on the Application object that this question maps to. If left blank, data from this question will be stored in the Question Response object.</inlineHelpText>
        <label>Application Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <inlineHelpText>Application status(es) this question applies to (applies to all if blank)</inlineHelpText>
        <label>Application Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Citizenship__c</fullName>
        <inlineHelpText>Citizenship type(s) this question applies to (applies to all if blank)</inlineHelpText>
        <label>Citizenship</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Citizenship_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Field__c</fullName>
        <description>API name of the field on the Contact object that this question maps to. If left blank, data from this question will be stored in the Question Response object.</description>
        <inlineHelpText>API name of the field on the Contact object that this question maps to. If left blank, data from this question will be stored in the Question Response object.</inlineHelpText>
        <label>Contact Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree_Type__c</fullName>
        <inlineHelpText>Degree type(s) this question applies to (applies to all if blank)</inlineHelpText>
        <label>Degree Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Degree_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Type__c</fullName>
        <inlineHelpText>Delivery type(s) this question applies to (applies to all if blank)</inlineHelpText>
        <label>Delivery Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Delivery_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dependency_Behavior__c</fullName>
        <inlineHelpText>Behavior that occurs when the question dependency logic evaluates to true. If blank, &quot;Show&quot; is used.</inlineHelpText>
        <label>Dependency Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Show</fullName>
                </value>
                <value>
                    <fullName>Hide</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dependency_Logic__c</fullName>
        <inlineHelpText>The type of logic that question dependencies are evaluated with. If AND is selected, all must evaluate to true. If OR is selected, only one needs to evaluate to true. If left blank, AND is used.</inlineHelpText>
        <label>Dependency Logic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <inlineHelpText>Order this question is displayed relative to other questions</inlineHelpText>
        <label>Display Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Display_as_Picklist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this reference question will display as a picklist instead of a typeahead.</description>
        <inlineHelpText>If checked, this reference question will display as a picklist instead of a typeahead.</inlineHelpText>
        <label>Display as Picklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Editable_Application_Status__c</fullName>
        <inlineHelpText>Application status(es) that applicants can edit this question for (applies to all if blank)</inlineHelpText>
        <label>Editable Application Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Email_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if this field is the email field associated with an external requirement (e.g. recommender&apos;s email for a letter of recommendation)</inlineHelpText>
        <label>External Email Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hardcoded_Value__c</fullName>
        <inlineHelpText>If this is a new reference field, this field can be populated with a hardcoded value that will be automatically applied to all new records (e.g. Record Type on Account)</inlineHelpText>
        <label>Hardcoded Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help_Text__c</fullName>
        <inlineHelpText>Text that displays below the question on the application. This field accepts HTML.</inlineHelpText>
        <label>Help Text</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Intended_Program_Codes__c</fullName>
        <description>Intended program codes that this requirement applies to (applies to all if blank)</description>
        <inlineHelpText>Intended program codes that this requirement applies to (applies to all if blank)</inlineHelpText>
        <label>Intended Program Codes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Program_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intended_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Intended Program this question applies to (applies to all if blank)</inlineHelpText>
        <label>Intended Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <inlineHelpText>Label for this question that is displayed to the applicant</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <inlineHelpText>Maximum character length that this question accepts.</inlineHelpText>
        <label>Length</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lookup_Object__c</fullName>
        <inlineHelpText>Object that this field is a part of (used for Related Object Requirement Items)</inlineHelpText>
        <label>Lookup Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lookup_Where_Clause__c</fullName>
        <inlineHelpText>SOQL WHERE clause to filter the typeahead functionality for reference questions (e.g. only displaying Colleges for Education History)</inlineHelpText>
        <label>Lookup Where Clause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Field_API_Name__c</fullName>
        <defaultValue>&quot;Name&quot;</defaultValue>
        <label>Name Field API Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Reference_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if this field is a part of a newly-created record to reference (e.g. new company that doesn&apos;t already exist in Salesforce)</inlineHelpText>
        <label>New Reference Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Picklist_Values__c</fullName>
        <inlineHelpText>List of picklist values, separated by new line</inlineHelpText>
        <label>Picklist Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Placeholder__c</fullName>
        <inlineHelpText>Placeholder text for this question</inlineHelpText>
        <label>Placeholder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Access_Rights_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if this question is for the reference&apos;s access rights</description>
        <inlineHelpText>Specifies if this question is for the reference&apos;s access rights</inlineHelpText>
        <label>Reference Access Rights Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Field__c</fullName>
        <description>The name of the Reference field to populate</description>
        <label>Reference Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_First_Name_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if this question is for a reference&apos;s first name</description>
        <inlineHelpText>Specifies if this question is for a reference&apos;s first name</inlineHelpText>
        <label>Reference First Name Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reference_Last_Name_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies if this question is for a reference&apos;s last name</description>
        <inlineHelpText>Specifies if this question is for a reference&apos;s last name</inlineHelpText>
        <label>Reference Last Name Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Object_Field__c</fullName>
        <inlineHelpText>API name of the field on the related object</inlineHelpText>
        <label>Related Object Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <inlineHelpText>Application status(es) that this field is required for (applies to none if blank)</inlineHelpText>
        <label>Required</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requirement_Item__c</fullName>
        <inlineHelpText>Requirement item for this question</inlineHelpText>
        <label>Requirement Item</label>
        <referenceTo>Requirement_Item__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Residency__c</fullName>
        <inlineHelpText>Residency type this question applies to (applies to all if blank)</inlineHelpText>
        <label>Residency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Residency_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_College__c</fullName>
        <inlineHelpText>School/college this question applies to (applies to all if blank)</inlineHelpText>
        <label>School / College</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>School_College</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Static_Text__c</fullName>
        <inlineHelpText>Text to display as part of this question</inlineHelpText>
        <label>Static Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Student_Type__c</fullName>
        <inlineHelpText>Student type(s) this question applies to (applies to all if blank)</inlineHelpText>
        <label>Student Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Student_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL_Parameter__c</fullName>
        <description>The URL Parameter to be used as a key when pre-populating this question</description>
        <label>URL Parameter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Required__c</columns>
        <columns>Label__c</columns>
        <columns>Editable_Application_Status__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Questions</pluralLabel>
    <recordTypes>
        <fullName>Address</fullName>
        <active>true</active>
        <description>Address question.</description>
        <label>Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Checkbox</fullName>
        <active>true</active>
        <description>Checkbox</description>
        <label>Checkbox</label>
    </recordTypes>
    <recordTypes>
        <fullName>Currency</fullName>
        <active>true</active>
        <description>Currency</description>
        <label>Currency</label>
    </recordTypes>
    <recordTypes>
        <fullName>Date</fullName>
        <active>true</active>
        <description>Date</description>
        <label>Date</label>
    </recordTypes>
    <recordTypes>
        <fullName>DateTime</fullName>
        <active>true</active>
        <description>Date/Time</description>
        <label>Date/Time</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email</fullName>
        <active>true</active>
        <description>Email</description>
        <label>Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>LongTextArea</fullName>
        <active>true</active>
        <description>Text Area (Long)</description>
        <label>Text Area (Long)</label>
    </recordTypes>
    <recordTypes>
        <fullName>MultiPicklist</fullName>
        <active>true</active>
        <description>Picklist (Multi-Select)</description>
        <label>Picklist (Multi-Select)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Number</fullName>
        <active>true</active>
        <description>Number</description>
        <label>Number</label>
    </recordTypes>
    <recordTypes>
        <fullName>Percent</fullName>
        <active>true</active>
        <description>Percent</description>
        <label>Percent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Phone</fullName>
        <active>true</active>
        <description>Phone</description>
        <label>Phone</label>
    </recordTypes>
    <recordTypes>
        <fullName>Picklist</fullName>
        <active>true</active>
        <description>Picklist</description>
        <label>Picklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>Radio</fullName>
        <active>true</active>
        <description>Radio field</description>
        <label>Radio</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reference</fullName>
        <active>true</active>
        <label>Reference</label>
    </recordTypes>
    <recordTypes>
        <fullName>Static</fullName>
        <active>true</active>
        <label>Static</label>
    </recordTypes>
    <recordTypes>
        <fullName>Text</fullName>
        <active>true</active>
        <description>Text</description>
        <label>Text</label>
    </recordTypes>
    <recordTypes>
        <fullName>TextArea</fullName>
        <active>true</active>
        <description>Text Area</description>
        <label>Text Area</label>
    </recordTypes>
    <recordTypes>
        <fullName>TextEncrypted</fullName>
        <active>true</active>
        <description>Encrypted text field</description>
        <label>Text (Encrypted)</label>
    </recordTypes>
    <recordTypes>
        <fullName>URL</fullName>
        <active>true</active>
        <description>URL</description>
        <label>URL</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>External_Email_Field</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(RecordType.DeveloperName == &apos;Email&apos;) &amp;&amp; External_Email_Field__c</errorConditionFormula>
        <errorMessage>You can only have an external email field on an email question.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Hardcoded_Values_Related_Requirements</fullName>
        <active>false</active>
        <errorConditionFormula>Requirement_Item__r.RecordType.DeveloperName != &apos;Related_Object&apos; &amp;&amp; NOT(ISBLANK(Hardcoded_Value__c))</errorConditionFormula>
        <errorMessage>Hardcoded values can only be used with &quot;Related Object&quot; requirement items.</errorMessage>
    </validationRules>
</CustomObject>